styling onprogress but need to fix the gap betwwen options

--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,6 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  position: relative;
 }
 
 .blobBlue,
@@ -25,16 +24,17 @@ body {
 }
 
 .blobYellow{
-  width: 200px;
-  position: absolute;
+  width: 25vw;
+  position: fixed;
+  top: 0;
   right: 0;
 }
 
 .blobBlue{
-  width: 200px;
-  position: absolute;
-  left: 0;
+  width: 18vw;
+  position: fixed;
   bottom: 0;
+  left: 0;
 }
 
 /* Intro Style */  
@@ -67,5 +67,48 @@ body {
   cursor: pointer;
 }
 
+/* MCQ section */
+.question-answer-section{
+  border: 0px solid black;
+  margin: 2em 4.6875em;
+}
+
+.question{
+  font-size: 1em;
+  margin: 0;
+}
+
+.options-wrapper{
+  border: 1px solid black;
+  border-bottom: 1px solid #DBDEF0;
+  display: flex;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  gap: 0.5em;
+  margin-bottom: 0.9em;
+}
+
+.options{
+  border: 1px solid #293264;
+  border-radius: 0.8em;
+  white-space: nowrap;
+  margin: 0.75em 0 0.96875em;
+}
+
+.options input{
+  opacity: 0;
+  visibility: hidden;
+  position: absolute;
+}
+
+.options label{
+  text-align: center;
+  font-family: "Inter", sans-serif;
+  margin: 0.5em 1em;
+  font-size: 0.625em;
+  display: flex;
+  justify-content: center;
+  flex-wrap: nowrap;
+}
 
 
